adding survival cost to status display

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -240,7 +240,10 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
             You harvested <strong class='text-success'><span data-bind='text:lastHarvestDecision'></span> <i class='icon-leaf'></i></strong> trees last round.
         </div>
         <div class='alert alert-message'>
-            You have <strong class='text-success'><span data-bind='text: storage'></span> <i class='icon-leaf'></i></strong> trees stored.
+            You have <strong class='text-success'><span data-bind='text: storage'></span> <i class='icon-leaf'></i></strong> trees stored.  
+        </div>
+        <div class='alert alert-error'>
+            <i class='icon-warning-sign'></i> You need at least <strong class='text-success'><span data-bind='text: costOfLiving'></span> <i class='icon-leaf'></i></strong> trees to survive each round.
         </div>
     </div>
     <div class='span5'>
