--- a/vcweb/static/css/boundaries/style.css
+++ b/vcweb/static/css/boundaries/style.css
@@ -2,3 +2,14 @@
     height: 600px;
     padding: 20px;
 }
+.boundaries-status-dashboard p {
+    padding-top: 15px;
+    font-size: 2em;
+}
+.boundaries-status-dashboard h4 {
+    border-bottom: 1px solid #ccc;
+}
+.boundaries-status-dashboard {
+    height: 80px;
+    padding: 8px 8px 8px 8px;
+}
