--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -21,17 +21,16 @@
 {% endblock content %}
 
 {% block sidebar %}
-<h3>Chat</h3>
-<div class='chat-sidebar well'>
-    <form id="chat-form" class='form-inline'>
-        <div class='input-prepend input-append'>
-            <span class='add-on'><i class='text-info icon-comment'></i></span>
-            <input class='chat-action input-block-level' id='chatText' type="text" placeholder="Enter a chat message">
-            <button class='btn' data-bind='click: submitChatMessage'>Send</button>
-        </div>
-    </form>
+<form id="chat-form" class='form-inline'>
+    <div class='input-prepend input-append'>
+        <span class='add-on'><i class='text-info icon-comment'></i></span>
+        <input id='chatMessage' type="text" placeholder="Enter a chat message">
+        <button class='btn btn-primary' data-bind='click: submitChatMessage'>Send</button>
+    </div>
+</form>
+<div class='chat-sidebar'>
     <div id='chat-div'>
-        <div data-bind='foreach: chatMessages'>
+        <div class='chat-messages' data-bind='foreach: chatMessages'>
             <i class='icon-user muted'></i> <strong>Participant <span data-bind='text: participant_number'></strong><b class='pull-right muted' data-bind='text: date_created'></b>
             <p>
             <small><i class='icon-double-angle-right'></i></small> <span data-bind='text: message'></span>
@@ -436,7 +435,6 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
             model.resourceImageHeight = ko.observable("79px");
             model.startRound = function() {
                 model.enableChat();
-                model.setFormDisabled("#vcweb-form", true);
                 model.secondsLeft(model.roundDuration());
                 model.setCurrentInterval(
                         setInterval(function() {
@@ -457,21 +455,24 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
                 model.setFormDisabled("#vcweb-form", true);
                 model.setFormDisabled("#chat-form", true);
                 console.debug(formData);
-                $.post('submit-harvest-decision', formData, function(jsonString) {
-                    console.log(jsonString);
-                    //update($.parseJSON(jsonString.experimentModelJson));
-                    model.secondsLeft(0);
+                $.post('submit-harvest-decision', formData, function(response) {
+                    console.log(response);
+                    model.update($.parseJSON(response.experimentModelJson));
+                    // FIXME: forward the response message to the chat window should be handled completely on the server
+                    // side instead of ping-ponging to the client side back to the real time server back out to all
+                    // clients in this group
+                    getWebSocket().send(createMessageEvent(response.message));
                     model.clearCurrentInterval();
                 });
             }
             model.submitChatMessage = function(data, evt) {
                 evt.preventDefault();
                 console.log("clicking chat message");
-                var message = $('#chatText').val();
+                var message = $('#chatMessage').val();
                 if (message) {
-                    $('#chatText').val('');
+                    $('#chatMessage').val('');
                     getWebSocket().send(createMessageEvent(message));
-                    $('#chatText').focus();
+                    $('#chatMessage').focus();
                 }
             }
             model.update = function() {
@@ -494,18 +495,20 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
                 // $('#content').removeClass('span6').addClass('span9');
                 // $('#sidebar').removeClass('span6').addClass('span3');
                 model.setFormDisabled("#chat-form", true);
-                model.chatEnabled(false);
             }
             model.enableChat = function() {
                 // $('#content').removeClass('span9').addClass('span6');
                 // $('#sidebar').removeClass('span3').addClass('span6');
+                model.setFormDisabled("#vcweb-form", true);
                 model.setFormDisabled("#chat-form", false);
-                model.chatEnabled(true);
             }
             model.afterRenderTemplate = function(elements) {
-                if (model.submitted()) {
+                if (model.submitted() || ! model.alive()) {
                     model.setFormDisabled("#vcweb-form", true);
                     model.setFormDisabled("#chat-form", true);
+                }
+                else {
+                    model.setFormDisabled("#vcweb-form", false);
                 }
                 if (model.roundType() === "REGULAR") {
                     model.startRound()
