--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -21,6 +21,12 @@
 {% endblock content %}
 
 {% block sidebar %}
+<h3>Chat</h3>
+<div data-bind='ifnot: chatEnabled'>
+    <div class='alert alert-info'>
+        <i class='icon-info-sign'></i> Chat is disabled until the next round begins.
+    </div>
+</div>
 <form id="chat-form" class='form-inline'>
     <div class='input-prepend input-append'>
         <span class='add-on'><i class='text-info icon-comment'></i></span>
@@ -339,9 +345,9 @@ reaches zero, any value you have selected will be submitted.  <strong>The defaul
             <input id='participantGroupId' type='hidden' name='participant_group_id' data-bind='value: participantGroupId'/>
             <input id='harvestDecisionTextInput' type='hidden' name='integer_decision' data-bind='value: harvestDecision'>
             <select id='harvestDecisionSelect' required="required" form="vcweb-form" data-bind='value: harvestDecision'>
-            {% for i in harvest_decision_choices %}
-            <option>{{i}}</option>
-            {% endfor %}
+                <!-- ko foreach: ko.utils.range(0, maxHarvestDecision()) -->
+                <option data-bind='value: $data, text: $data'></option>
+                <!-- /ko -->
             </select>
 
         </div>
